--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -132,7 +132,7 @@ i.uil.uil-shopping-cart {
 }
 
 .left-sidebar {
-  width: 15%;
+  width: 220px;
   height: 100vh;
   padding: 10px 10px;
   position: fixed;
@@ -141,8 +141,7 @@ i.uil.uil-shopping-cart {
 }
 
 .main-right-sidebar {
-  width: 85%;
-  float: right;
+  margin-left: 240px;
 }
 
 .logo-bar {
@@ -283,7 +282,6 @@ i.uil.uil-shopping-cart {
 
 .slider img {
   width: 100%;
-  height: 100%;
   display: block;
 }
 
@@ -294,7 +292,7 @@ i.uil.uil-shopping-cart {
 
 .banner-area img {
   width: 100%;
-  height: 100%;
+  display: block;
 }
 
 .image-hover {
@@ -378,8 +376,7 @@ i.uil.uil-shopping-cart {
   }
 
   .main-right-sidebar {
-    width: 100%;
-    float: none;
+    margin-left: 0;
   }
 
   .search {
@@ -415,14 +412,6 @@ i.uil.uil-shopping-cart {
 @media only screen and (min-width: 768px) and (max-width:992px) {
   .shopping-cart {
     margin: 0px 25px;
-  }
-
-  .left-sidebar {
-    width: 20%;
-  }
-
-  .main-right-sidebar {
-    width: 80%;
   }
 }
 
